--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -195,7 +195,7 @@
            const currentScrollPosition = window.scrollY;
            if (currentScrollPosition < lastScrollPosition) {
                dir = "up";
-           } else if (currentScrollPosition > lastScrollPosition) {
+           } else {
            	   dir = "down";
            }
 
