--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -189,7 +189,6 @@
 		   event.preventDefault();
 		   event.stopPropagation();
 		   window.scrollTo(currentSection.offset().top, 0); // Sticky
-		   snapping = true;
 
            let dir;
            const currentScrollPosition = window.scrollY;
@@ -199,7 +198,10 @@
            	   dir = "down";
            }
 
-		   setTimeout(() => { handleSnap(dir); }, 100);
+		   setTimeout(() => { 
+             snapping = true;
+		   	 handleSnap(dir); 
+		   }, 100);
 		});
 
 	    // Prevent scrolling
