--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -174,26 +174,26 @@
                 newSection = await currentSection.prevAll(".snappable").first();
         	}
 
-    // If there is a new section, scroll to it smoothly
-    if (newSection && newSection.length > 0) {
-        // Create a closure to capture the current value of newSection
-        (async () => {
-            const sectionElement = newSection[0];
+		    // If there is a new section, scroll to it smoothly
+		    if (newSection && newSection.length > 0) {
+		        // Capture the offset of the new section
+		        const offsetTop = newSection.offset().top;
 
-            // During Snapping
-            blockWheel = true;
-            console.log("start snapping");
+		        // During Snapping
+		        blockWheel = true;
+		        console.log("start snapping");
 
-            // Scroll to the captured reference
-            await sectionElement.scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'start' })
-                .then(() => {
-                    console.log("release");
-                    currentSection = newSection;
-                    blockWheel = false;
-                    snapping = false;
-                });
-        })();
-    }
+		        // Scroll to the captured offset
+		        $('html, body').animate({
+		            scrollTop: offsetTop
+		        }, 1000, 'swing', () => {
+		            console.log("release");
+		            currentSection = newSection;
+		            blockWheel = false;
+		            snapping = false;
+		        });
+		    }
+
         }
 
 		// Function to handle scrolling
