--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -201,7 +201,7 @@
 		   if(snapping){ return; }
 		   event.preventDefault();
 		   event.stopPropagation();
-		   window.scrollTo(currentSection.offset().top, 0); // Sticky
+		   //window.scrollTo(currentSection.offset().top, 0); // Sticky
 		});
 
 	    // Prevent scrolling
