--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -192,6 +192,9 @@
 		            blockWheel = false;
 		            snapping = false;
 		        });
+		    }else{
+		    	blockWheel = false;
+		        snapping = false;
 		    }
 
         }
