--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -168,7 +168,7 @@
         	let sections = $(".snappable");
             for(section of sections){
             	 if(section.id === currentSection[0].id){
-                      return sections[i+1];
+                      return $(sections[i+1]);
             	 };
             	 i++;
             }           
@@ -179,7 +179,7 @@
         	let sections = $(".snappable");
             for(section of sections){
             	 if(section.id === currentSection[0].id){
-                      return sections[i-1];
+                      return $(sections[i-1]);
             	 };
             	 i++;
             }           
