--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -187,7 +187,7 @@
 
         function updateCurrentSection(section){
         	currentSection = section;
-            var anchor = $('a[href="#"'+section[0].id+']');
+            var anchor = $('a[href="#'+section[0].id+'"]');
             $(".anchor").removeClass(".current_anchor");
             anchor.addClass(".current_anchor");
             
