--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -253,10 +253,10 @@
            	    dir = "down";
               }
 
-              if (dir ===   "up" && $(window).scrollTop() > currentSection.offset().top;) {
+              if (dir ===   "up" && $(window).scrollTop() > currentSection.offset().top) {
                    return;
               }
-              if (dir === "down" && $(window).scrollBottom() < currentSection.offset().bottom;) {
+              if (dir === "down" && $(window).scrollBottom() < currentSection.offset().bottom) {
                    return;
               }
 
