--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -268,6 +268,7 @@
                    return;
                 }else
                 if(Math.abs(deltaY) < 50){
+                  $(window).scrollTop( currentSection.offset().top + currentSection.outerHeight() );
               	  event.preventDefault();
               	  return;
                 }
