--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -268,7 +268,7 @@
                    return;
                 }else
                 if(Math.abs(deltaY) < 50){
-                  $(window).scrollTop( currentSection.offset().top + currentSection.outerHeight() );
+                  $(window).scrollTop( currentSection.offset().top + currentSection.outerHeight() - $(window).height() );
               	  event.preventDefault();
               	  return;
                 }
