--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -18,6 +18,9 @@
 </head>
 <body>
 	<section class="snappable" id="section_main">
+		<div class="giphy-round">
+    	   <iframe src="https://giphy.com/embed/2aUH5BAyaNd60" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
 	    <div id="root">
 	    </div>
 	</section>
@@ -104,7 +107,7 @@
 
     </section>
     <section class="snappable" id="section_pig">
-    	<iframe src="https://giphy.com/embed/2aUH5BAyaNd60" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+
     </section>
 	<div id="footer">
 	    <div id="anchors">
