--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -285,6 +285,11 @@
               handleSnap(dir); 
 		  }
 		}, { passive: false });
+        
+        $(".giphy-round").hide();
+        $("#oinkImage").click(function(){
+            $(".giphy-round").show();
+        });
 
     });
 	</script>
