--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -293,7 +293,18 @@
 	<script>
     $(document).ready(function(){
         $("#oinkImage").click(function(){
-            $(".giphy-round").show();
+            $(".giphy-round").css("visibility","visible").css("display","block");
+            $(".giphy-round").animate({
+		        // Scale the div to 100%
+		        scaleX: 1,
+		        scaleY: 1
+		    }, {
+		        duration: 1000, // Animation duration in milliseconds
+		        easing: "easeInOutExpo", // Easing function for smooth animation (optional)
+		        complete: function() {
+		            
+		        }
+		    });
         });
 
     });
