--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -293,7 +293,7 @@
 	<script>
     $(document).ready(function(){
         $("#oinkImage").click(function(){
-            $(".giphy-round").css("visibility","visible").css("display","block");
+            $(".giphy-round").css("visibility","visible!important").css("display","block!important");
             $(".giphy-round").animate({
 		        // Scale the div to 100%
 		        scaleX: 1,
