--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -290,7 +290,7 @@
 
     <script type="module" src="/oink_fft/js/main.js" defer></script>
 
-	<script>
+	<script defer>
     $(document).ready(function(){
         $("#oinkImage").click(function(){
             $(".giphy-round").css("visibility","visible!important").css("display","block!important");
