--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -190,7 +190,7 @@
 		    	$("section").addClass("snappable");
                 if(currentSection.id == "section_intro"){
                     $("#section_usage").removeClass("snappable");
-                }else
+                }else{
                     $("#section_intro").removeClass("snappable");
                 }
 		    }
