--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -179,6 +179,7 @@
 		    	}else{
 		    		return;
 		    	}
+		    	$('a[href="#section_intro"]').hide();
                 $("section").addClass("snappable");
             // Desktop Layout
 		    } else {
@@ -187,6 +188,7 @@
 		    	}else{
 		    		return;
 		    	}
+		    	$('a[href="#section_intro"]').show();
 		    	$("section").addClass("snappable");
                 if(currentSection.id == "section_intro"){
                     $("#section_usage").removeClass("snappable");
