--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -211,7 +211,7 @@
 		    		return;
 		    	}
 		    	// On Change to Desktop View
-		    	if(currentSection.id == "section_intro"){
+		    	if(currentSection[0].id == "section_intro"){
 		    		scrollTo($("#section_usage"));
 		    	}else{
 		    		scrollTo(currentSection);
