--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -30,7 +30,7 @@
 			<h1 id="h_1">Introducing Oink FFT: A Quick and Dirty JavaScript FFT Implementation</h1>
             <div id="d_1" class="collapsable">
 				<p id="d_1">Are you looking to dive into Fourier analysis without getting lost in complex algorithms and mathematical intricacies?<br>Meet Oink FFT - your quick and dirty solution for Fast Fourier Transform in JavaScript.<br>
-				Whether you're exploring signal processing concepts, building audio visualizations, or experimenting with frequency analysis, Oink FFT provides a simple and effective solution to get you started quickly. Dive into the world of Fourier analysis with Oink FFT and unlock the secrets hidden within your data.</p>
+				Whether you're exploring signal processing concepts, building audio visualizations, or experimenting with frequency analysis, Oink FFT provides a simple and effective solution to get you started quickly. Dive into the world of Fourier analysis with Oink FFT and unlock the dirty secrets hidden within your data.</p>
             </div>
 
 			<h2 id="h_2">What is FFT?</h2>
@@ -49,7 +49,7 @@
 				  <li><strong>Quick and Dirty:</strong> This FFT implementation prioritizes simplicity and speed, making it suitable for rapid prototyping and experimentation.</li>
 				  <li><strong>JavaScript-Based:</strong> Oink FFT is written in JavaScript, making it accessible to web developers and compatible with modern web applications.</li>
 				  <li><strong>Speed-Optimized:</strong> Leveraging WebAssembly (WASM) and harnessing specific mathematical Fourier Intrinsics, this implementation is finely tuned for exceptional speed.</li>
-				  <li><strong>Competitive Performance:</strong> With its optimized speed, Oink FFT can effectively compete with other available FFT implementations."</li>
+				  <li><strong>Competitive Performance:</strong> With its optimized speed, Oink FFT can effectively compete with other available FFT implementations.</li>
 				</ol>
 		    </div>
 	    </section>
